; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/extr_quantum.c_unregister_code16.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/extr_quantum.c_unregister_code16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KC_NO = common dso_local global i64 0, align 8
@unregister_mods = common dso_local global i32 0, align 4
@unregister_weak_mods = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @unregister_code16(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = call i32 @unregister_code(i64 %3)
  %5 = load i64, i64* %2, align 8
  %6 = call i64 @IS_MOD(i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i64, i64* %2, align 8
  %10 = load i64, i64* @KC_NO, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %16

12:                                               ; preds = %8, %1
  %13 = load i64, i64* %2, align 8
  %14 = load i32, i32* @unregister_mods, align 4
  %15 = call i32 @do_code16(i64 %13, i32 %14)
  br label %20

16:                                               ; preds = %8
  %17 = load i64, i64* %2, align 8
  %18 = load i32, i32* @unregister_weak_mods, align 4
  %19 = call i32 @do_code16(i64 %17, i32 %18)
  br label %20

20:                                               ; preds = %16, %12
  ret void
}

declare dso_local i32 @unregister_code(i64) #1

declare dso_local i64 @IS_MOD(i64) #1

declare dso_local i32 @do_code16(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
